<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark1"
    tools:context=".MainPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/orange">

        <ImageButton
            android:id="@+id/HomePage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/home"/>

        <ImageButton
            android:id="@+id/ContactPage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:layout_marginEnd="30dp"
            android:src="@drawable/contact"/>

        <ImageButton
            android:id="@+id/InfoPage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:layout_marginEnd="30dp"
            android:src="@drawable/info"/>

        <ImageButton
            android:id="@+id/CallPage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:src="@drawable/support"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/skillaz_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textColor="@color/yellow"
            android:layout_marginTop="60dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_Email_gm"
            android:textColor="@color/yellow"
            android:layout_marginTop="40dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_Email_yn"
            android:textColor="@color/yellow"
            android:layout_marginTop="40dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TP"
            android:textColor="@color/yellow"
            android:layout_marginTop="40dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textColor="@color/yellow"
            android:layout_marginTop="40dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_tel"
            android:textColor="@color/yellow"
            android:layout_marginTop="40dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_tel_2"
            android:textColor="@color/yellow"
            android:layout_marginTop="40dp"
            android:textSize="22sp"/>

    </LinearLayout>

</RelativeLayout>