<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/skillaz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/logon"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/stroke"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="80dp"
        android:text="2023г" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_bottom"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="536dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/SignIn"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_signin"
            android:text="@string/SingnIn"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Register"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_signin"
            android:text="@string/Register"
            android:textSize="25sp" />
    </LinearLayout>
</RelativeLayout>