<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark1"
    tools:context=".MainPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/orange">

        <ImageButton
            android:id="@+id/HomePage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/home"/>

        <ImageButton
            android:id="@+id/ContactPage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:layout_marginEnd="30dp"
            android:src="@drawable/contact"/>

        <ImageButton
            android:id="@+id/InfoPage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:layout_marginEnd="30dp"
            android:src="@drawable/info"/>

        <ImageButton
            android:id="@+id/CallPage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:src="@drawable/support"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="669dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/skillaz_2"
                    android:layout_marginBottom="20dp"/>


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/previu"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:text="@string/a1"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="522dp"
                    android:layout_height="408dp"
                    app:srcCompat="@drawable/a2"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/skillaz"
                    android:textColor="@color/yellow"
                    android:textSize="25sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_we"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageCEO"
                        android:layout_width="120dp"
                        android:layout_height="125dp"
                        android:layout_gravity="bottom"
                        android:layout_marginEnd="55dp"
                        app:srcCompat="@drawable/ruk"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/FI"
                        android:textColor="@color/yellow"
                        android:textSize="25sp"
                        tools:ignore="MissingConstraints,RtlHardcoded" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>